[package]
name = "cozo-bin"
version = "0.7.6"
edition = "2021"
license = "MPL-2.0"
description = "Standalone cozo-redb REPL"
authors = ["Ziyang Hu", "Matt Lawless"]
repository = "https://github.com/lawless-m/cozo-redb"

[features]
#! # Features

default = ["compact"]
## Enables the `storage-redb`, `requests` and `graph-algo` features (recommended default)
compact = ["storage-redb", "requests", "graph-algo"]
## Enables the pure-Rust redb storage backend
storage-redb = ["cozo/storage-redb"]
## Enables the graph algorithms
graph-algo = ["cozo/graph-algo"]
## Allows the utilities to make web requests to fetch data
requests = ["cozo/requests"]

[dependencies]
cozo = { version = "0.7.6", path = "../cozo-core", default-features = false }
clap = { version = "4.5.4", features = ["derive"] }
miette = { version = "5.10.0", features = ["fancy"] }
serde_json = "1.0.116"
prettytable = "0.10.0"
rustyline = "14.0.0"
minreq = { version = "2.11.2", features = ["https-rustls"] }
ctrlc = "3.4.4"
