[package]
name = "cozo"
version = "0.7.6"
edition = "2021"
description = "A general-purpose, transactional, relational database that uses Datalog and focuses on graph data and algorithms"
authors = ["Ziyang Hu"]
license = "MPL-2.0"
homepage = "https://www.cozodb.org"
repository = "https://github.com/cozodb/cozo"
documentation = "https://docs.cozodb.org"
exclude = [
    "tests/*",
]

[features]
#! # Features

default = ["compact"]
## Enables the `minimal`, `requests` and `graph-algo` features.
compact = ["storage-redb", "requests", "graph-algo"]
## Enables the [redb](https://github.com/cberner/redb) backend.
## Pure Rust, single-file, ACID transactions, supports time travel. The only
## persistent backend shipped by this fork.
storage-redb = ["dep:redb"]
## Enables the graph algorithms.
graph-algo = ["graph", "rayon"]
## Allows the utilities to make web requests to fetch data.
requests = ["dep:minreq"]
## Polyfills for the WASM target
wasm = ["uuid/js", "dep:js-sys"]

#! # Feature notes
#!
#! `storage-redb` is the only persistent backend in this fork. An in-memory
#! backend (`mem`, always available) is used for tests and the WASM build.
#! The `graph-algo` feature is required for built-in graph algorithms.

[dependencies]
casey = "0.4.0"
either = "1.11.0"
rand = "0.8.5"
miette = { version = "5.10.0", features = ["fancy"] }
lazy_static = "1.4.0"
log = "0.4.21"
env_logger = "0.11.3"
smallvec = { version = "1.13.2", features = ["serde", "write", "union", "const_generics", "const_new"] }
smartstring = { version = "1.0.1", features = ["serde"] }
serde_json = "1.0.116"
serde = { version = "1.0.199" }
serde_derive = "1.0.199"
serde_bytes = "0.11.14"
rmp = "0.8.14"
rmp-serde = "1.2.0"
rmpv = "1.0.2"
base64 = "0.22.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
priority-queue = "1.4.0"
ordered-float = "4.2.0"
byteorder = "1.5.0"
num-traits = "0.2.18"
itertools = "0.12.1"
regex = "1.10.4"
pest = "2.7.9"
pest_derive = "2.7.9"
approx = "0.5.1"
unicode-normalization = "0.1.23"
thiserror = "1.0.59"
uuid = { version = "1.8.0", features = ["v1", "v4", "serde"] }
csv = "1.3.0"
document-features = "0.2.8"
rayon = { version = "1.10.0", optional = true }
minreq = { version = "2.11.2", features = ["https-rustls"], optional = true }
redb = { version = "4.0.0", optional = true }
js-sys = { version = "0.3.60", optional = true }
graph = { version = "0.3.1", optional = true }
crossbeam = "0.8.4"
ndarray = { version = "0.15.6", features = ["serde"] }
sha2 = "0.10.8"
rustc-hash = "1.1.0"
twox-hash = "1.6.3"
quadrature = "0.1.2"
swapvec = "0.3.0"

[dev-dependencies]
tempfile = "3.14.0"
